force-app/main/default/objects/sugati__Room_Booking_Setting__c/sugati__Room_Booking_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Room Booking Setting</label>
</CustomObject>