force-app/main/default/objects/sugati__Room_Booking_Setting__c/fields/sugati__Booking_Timer__c.field-meta.xml
<CustomField>
    <fullName>sugati__Booking_Timer__c</fullName>
    <label>Booking Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>