force-app/main/default/objects/sugati__Room_Booking_Setting__c/fields/sugati__Days_to_Display__c.field-meta.xml
<CustomField>
    <fullName>sugati__Days_to_Display__c</fullName>
    <label>Days to Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>