force-app/main/default/objects/sugati__Room_Booking_Setting__c/fields/sugati__Default_Waiting_Process_Duration__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Waiting_Process_Duration__c</fullName>
    <label>Default Waiting Process Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>