force-app/main/default/objects/sugati__Room_Booking_Setting__c/fields/sugati__Enable__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable</label>
    <type>Checkbox</type>
</CustomField>