force-app/main/default/objects/sugati__Room_Booking_Setting__c/fields/sugati__Enable_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Local_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Local Currency</label>
    <type>Checkbox</type>
</CustomField>