force-app/main/default/objects/sugati__Room_Booking_Setting__c/fields/sugati__Show_Price_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Price_Breakdown__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox has to be checked if you want to see a button on Room Booking for the price breakdown.</inlineHelpText>
    <label>Show Price Breakdown</label>
    <type>Checkbox</type>
</CustomField>